feat(all): update all

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,1 +1,46 @@
-sign: h5
+---
+# defaults file for sysinit
+
+# system init install base lib packages
+pkgs:
+  lib:
+    - cmake
+    - glibc
+    - gcc
+    - make
+    - libselinux-python
+    - zlib
+  tools:
+    - atop
+    - bash-completion
+    - bind-utils
+    - curl
+    - dstat
+    - hping3
+    - htop
+    - iotop
+    - iptables-services
+    - lrzsz
+    - net-snmp
+    - net-tools
+    - perf
+    - rsync
+    - strace
+    - sysstat  
+    - telnet
+    - tree
+    - unzip
+    - vim
+    - wget
+    - zip
+
+# set up the time source server
+ntp_servers:
+  - "ntp1.aliyun.com"
+  - "ntp2.aliyun.com"
+  - "time1.cloud.tencent.com"
+  - "time2.cloud.tencent.com"
+  - "0.cn.pool.ntp.org"
+
+# set network segments that allow internal time synchronization, such as "10.0.0.0/8", all allowed by default
+local_network: "0.0.0.0/0"
